<resources>
    <string name="app_name">Mall</string>
    //google
    <string name="server_client_id">196654093436-04n6b0l59h9ddjn33lm0bkavi8k220hb.apps.googleusercontent.com</string>
    //facebook
    <string name="facebook_app_id">1083590812107257</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="next">Next</string>
    <string name="already_have_account">Already have account?<br />Back to login page.</string>
    <string name="back_to_login">Back to login page.</string>
    <string name="send_sms_hint">A verification code was sent to you.<br />Please check your SMS.</string>
    <string name="enter_code">Enter code</string>
    <string name="resend_in">Resend in</string>
    <string name="sec">sec</string>
    <string name="welcome_hint">Congratulations!<br />You have created an PLE MALL<br />account!</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="new_password">New Password</string>
    <string name="complete">complete</string>
    <string name="welcome">welcome</string>
    <string name="consignment">Consignment</string>
    <string name="mall">Mall</string>
    <string name="auction">Auction</string>
    <string name="panel">Panel</string>
    <string name="my_order">My Order</string>
    <string name="check_all">Check all</string>
    <string name="to_pay">To Pay</string>
    <string name="to_ship">To Ship</string>
    <string name="to_receive">To Receive</string>
    <string name="completed">Completed</string>
    <string name="my_invitations">My Invitations</string>
    <string name="my_likes">My Likes</string>
    <string name="become_a_seller">Become a seller</string>
    <string name="chat_with_us">Chat with us!</string>
    <string name="my_balance">My Balance</string>
    <string name="top_up">Top Up</string>
    <string name="coins">Coins</string>
    <string name="points">Points</string>
    <string name="recommend">Recommend</string>
    <string name="luxury">Luxury</string>
    <string name="electronic">Electronic</string>
    <string name="food">Food</string>
    <string name="travel">Travel</string>
    <string name="car">Car</string>
    <string name="clothes">Clothes</string>
    <string name="furniture">Furniture</string>
    <string name="categories">Categories</string>
    <string name="hot_deal">Hot deal</string>
    <string name="price">Price</string>
    <string name="announcement">Announcement:</string>
    <string name="sold">Sold</string>
</resources>