<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.texonapp.mall.login.LoginFragment"
        android:background="@color/clr_white">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_95sdp"
            android:layout_height="@dimen/_95sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/logo"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_120sdp"/>

        <TextView
            android:id="@+id/hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/logo"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_40sdp"
            android:text="@string/send_sms_hint"
            android:gravity="center"
            android:textSize="@dimen/_11sdp"
            android:textColor="@color/clr_gray_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/user_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/btn_round_white"
            android:gravity="center"
            android:hint="@string/enter_code"
            android:textColor="@color/clr_black"
            android:textColorHint="@color/clr_gray_light"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hint" />

        <LinearLayout
            android:id="@+id/resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_code">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend_in"
                android:textSize="@dimen/_10sdp"
                android:textAllCaps="false"
                android:textColor="@color/clr_black" />

            <TextView
                android:id="@+id/count_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="59"
                android:textSize="@dimen/_10sdp"
                android:textAllCaps="false"
                android:textColor="@color/orange" />

            <TextView
                android:id="@+id/second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/sec"
                android:textSize="@dimen/_10sdp"
                android:textAllCaps="false"
                android:textColor="@color/clr_black" />

        </LinearLayout>

        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginLeft="@dimen/_80sdp"
            android:layout_marginRight="@dimen/_80sdp"
            android:background="@drawable/btn_round_orange"
            android:gravity="center"
            android:text="@string/next"
            android:textAllCaps="true"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/whiteNew"
            android:textColorHint="@color/clr_gray_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resend"/>

        <TextView
            android:id="@+id/back_to_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginLeft="@dimen/_80sdp"
            android:layout_marginRight="@dimen/_80sdp"
            android:gravity="center"
            android:text="@string/back_to_login"
            android:textSize="@dimen/_9sdp"
            android:textColor="@color/clr_gray_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/next"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
