<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.texonapp.mall.login.LoginFragment"
        android:background="@color/clr_white">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_logo"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_120sdp"/>

        <TextView
            android:id="@+id/hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/logo"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_40sdp"
            android:text="@string/reset_your_password"
            android:gravity="center"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/clr_black"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            app:layout_constraintTop_toBottomOf="@id/hint"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_40sdp"
            android:background="@drawable/btn_round_white"
            android:hint="@string/new_password"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/clr_black"
            android:textColorHint="@color/clr_gray_light"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/user_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_40sdp"
            android:background="@drawable/btn_round_white"
            android:hint="@string/password"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/clr_black"
            android:textColorHint="@color/clr_gray_light"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_password"/>

        <Button
            android:id="@+id/complete"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginLeft="@dimen/_80sdp"
            android:layout_marginRight="@dimen/_80sdp"
            android:background="@drawable/btn_round_orange"
            android:gravity="center"
            android:text="@string/complete"
            android:textAllCaps="true"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/whiteNew"
            android:textColorHint="@color/clr_gray_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_confirm_password"/>

        <TextView
            android:id="@+id/back_to_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginLeft="@dimen/_80sdp"
            android:layout_marginRight="@dimen/_80sdp"
            android:gravity="center"
            android:text="@string/back_to_login"
            android:textSize="@dimen/_9sdp"
            android:textColor="@color/clr_gray_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/complete"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
