<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.texonapp.mall.login.LoginFragment"
        android:background="@color/clr_white">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_95sdp"
            android:layout_height="@dimen/_95sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/logo"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_80sdp"/>

        <EditText
            android:id="@+id/user_phone_number"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            app:layout_constraintTop_toBottomOf="@id/logo"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_40sdp"
            android:background="@drawable/btn_round_white"
            android:hint="@string/phone_number"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/clr_black"
            android:textColorHint="@color/clr_gray_light"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_40sdp"
            android:background="@drawable/btn_round_white"
            android:hint="@string/password"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/clr_black"
            android:textColorHint="@color/clr_gray_light"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_phone_number"/>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginLeft="@dimen/_80sdp"
            android:layout_marginRight="@dimen/_80sdp"
            android:background="@drawable/btn_round_orange"
            android:gravity="center"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/whiteNew"
            android:textColorHint="@color/clr_gray_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_password"/>

        <TextView
            android:id="@+id/reset_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginLeft="@dimen/_80sdp"
            android:layout_marginRight="@dimen/_80sdp"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textSize="@dimen/_9sdp"
            android:textColor="@color/clr_gray_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login"/>

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/clr_black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reset_password" />

        <View
            android:id="@+id/view14"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:background="@color/clr_black"
            app:layout_constraintBottom_toBottomOf="@+id/tv_signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_signup"
            app:layout_constraintTop_toTopOf="@+id/tv_signup" />

        <View
            android:id="@+id/view15"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@color/clr_black"
            app:layout_constraintBottom_toBottomOf="@+id/tv_signup"
            app:layout_constraintEnd_toStartOf="@+id/tv_signup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_signup" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_signup">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/facebook_login_but"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginEnd="@dimen/_126sdp"
            android:layout_width="@dimen/_50sdp"
            app:srcCompat="@drawable/ic_facebook"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

<!--        <com.facebook.login.widget.LoginButton-->
<!--            android:id="@+id/facebook_login"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:visibility="gone" />-->

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/google_account"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_width="@dimen/_50sdp"
            app:srcCompat="@drawable/ic_google"
            app:layout_constraintStart_toEndOf="@id/facebook_login_but"
            app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/phone_login"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_width="@dimen/_50sdp"
                app:srcCompat="@drawable/ic_phone"
                app:layout_constraintStart_toEndOf="@id/google_account"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
